# multi-agent-task-alloc

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  hf_space_config.yaml  inference.py  models.py  my_env.py  openenv.yaml  openenv_server.py  pyproject.toml  requirements.txt  spaces.toml
server/: app.py  task_allocation_environment.py
